# controlRecording

./: CMakeLists.txt  README.md
inc/: hostReceiver.h  messageStructure.h  remoteSender.h
install/: bluetoothServer.service  hostBluetoothServer.sh  hostReceiver.service  remoteSender.service  rfcomm.service  start_hostReceiver_on_boot.sh  start_remoteSender_on_boot.sh
lib/net-lib/: CMakeLists.txt  start.sh
lib/net-lib/example/: CMakeLists.txt
lib/net-lib/include/: Networking.h  TcpClient.h  TcpServer.h  UdpClient.h  UdpServer.h
lib/net-lib/src/: CMakeLists.txt  Networking.cpp  TcpClient.cpp  TcpServer.cpp  UdpClient.cpp  UdpServer.cpp
lib/net-lib/test/: CMakeLists.txt
lib/net-lib/test/include/: TestNetworking.h  TestTcp.h
lib/net-lib/test/src/: TestNetworking.cpp  TestTcp.cpp
lib/x-tools/arm-unknown-linux-gnueabihf/: build.log.bz2
lib/x-tools/arm-unknown-linux-gnueabihf/arm-unknown-linux-gnueabihf/lib/: libstdc++.so.6.0.22  libstdc++.so.6.0.22-gdb.py
lib/x-tools/arm-unknown-linux-gnueabihf/arm-unknown-linux-gnueabihf/sysroot/lib/: libatomic.so.1.2.0  libitm.so.1.0.0  libstdc++.so.6.0.22-gdb.py
lib/x-tools/arm-unknown-linux-gnueabihf/arm-unknown-linux-gnueabihf/sysroot/sbin/: sln
lib/x-tools/arm-unknown-linux-gnueabihf/arm-unknown-linux-gnueabihf/sysroot/usr/libexec/getconf/: XBS5_ILP32_OFF32
lib/x-tools/arm-unknown-linux-gnueabihf/arm-unknown-linux-gnueabihf/sysroot/usr/sbin/: iconvconfig  nscd  zdump  zic
lib/x-tools/arm-unknown-linux-gnueabihf/lib/gcc/arm-unknown-linux-gnueabihf/6.3.1/install-tools/: mkheaders.conf
lib/x-tools/arm-unknown-linux-gnueabihf/lib/ldscripts/: armelf_linux_eabi.x  armelf_linux_eabi.xbn  armelf_linux_eabi.xc  armelf_linux_eabi.xd  armelf_linux_eabi.xdc  armelf_linux_eabi.xdw  armelf_linux_eabi.xn  armelf_linux_eabi.xs  armelf_linux_eabi.xsc  armelf_linux_eabi.xsw  armelf_linux_eabi.xw  armelfb_linux_eabi.x  armelfb_linux_eabi.xbn  armelfb_linux_eabi.xc  armelfb_linux_eabi.xd  armelfb_linux_eabi.xdc  armelfb_linux_eabi.xdw  armelfb_linux_eabi.xn  armelfb_linux_eabi.xs  armelfb_linux_eabi.xsc  armelfb_linux_eabi.xsw  armelfb_linux_eabi.xw
lib/x-tools/arm-unknown-linux-gnueabihf/libexec/gcc/arm-unknown-linux-gnueabihf/6.3.1/: collect2  liblto_plugin.so.0.0.0  lto-wrapper
lib/x-tools/arm-unknown-linux-gnueabihf/libexec/gcc/arm-unknown-linux-gnueabihf/6.3.1/install-tools/: fixincl  mkheaders
src/: systemApp.cpp
src/hostReceiver/: hostReceiver.cpp
src/remoteSender/: hostReceiver.cpp  remoteSender.cpp  remoteSenderApp.cpp
